--- a/.github/workflows/main_dogarmor-backend-rg-westus3.yml
+++ b/.github/workflows/main_dogarmor-backend-rg-westus3.yml
@@ -21,15 +21,15 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
-        working-directory: backend
+        # Removed: working-directory: backend
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Zip backend for deployment
+      - name: Zip app for deployment
+        # Changed 'backend' to '.' to zip the current directory (root of repo)
         run: |
-          cd backend
-          zip -r ../release.zip .
+          zip -r release.zip . # Zip the current directory contents into release.zip
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
