--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 __pycache__/
 *.pyc
 .env
+
+# Ignore Stanford Dogs dataset images and folders
+data/stanford-dogs/images/Images
+data/stanford-dogs/train/
+data/stanford-dogs/test/
